src/styles/PageHero.scss
.page-hero {
    width: 100%;
    height: 100vh;
    height: calc(var(--vh, 1vh) * 100);
    min-height: 100%;/* fall-back */
    min-height: -moz-available;
    min-height: -webkit-fill-available;
    min-height: fill-available;
    overflow: hidden;
    position: relative;

    .gatsby-image-wrapper{
        clip: rect(0, auto, auto, 0);
        position: absolute;
        width: 100%;
        height: 100%;

        img {
            position: fixed!important;
            width: 100%;
            height: 100%;
            object-fit: cover;
        }
    }

    &_container {
        position: absolute;
        bottom: 2em;
        color: $white;
        left: 50%;
        transform: translateX(-50%);

        @media(max-width: $tablet){
            width: calc(100% - 50px);
        }
    }
}

